Modular compose: per-app fragments + generator; all apps enabled by default; testing branch

--- a/prep/config.yml
+++ b/prep/config.yml
@@ -261,3 +261,11 @@ services:
         target: "_blank"
 
 
+
+# === App selection (all enabled by default) ===
+apps:
+  plex: true
+  sonarr: true
+  radarr: true
+  prowlarr: true
+  delugevpn: true
