Add additional per-app compose fragments (Jellyfin, Emby, Overseerr, SABnzbd, Lidarr, Bazarr, Readarr, Jackett, Tautulli, qBittorrentVPN, Unpackerr, Tdarr) and wire into config

--- a/prep/config.yml
+++ b/prep/config.yml
@@ -269,3 +269,16 @@ apps:
   radarr: true
   prowlarr: true
   delugevpn: true
+  jellyfin: false
+  emby: false
+  overseerr: false
+  jellyseerr: false
+  tautulli: false
+  sabnzbd: false
+  jackett: false
+  lidarr: false
+  bazarr: false
+  readarr: false
+  qbittorrentvpn: false
+  unpackerr: false
+  tdarr: false
